--- a/baithi/baithi/baithi.csproj
+++ b/baithi/baithi/baithi.csproj
@@ -182,7 +182,7 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
-    <Content Include="Timkiem.aspx" />
+    <Content Include="thietketrangtimkiem.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -244,12 +244,12 @@
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
-    <Compile Include="Timkiem.aspx.cs">
-      <DependentUpon>Timkiem.aspx</DependentUpon>
+    <Compile Include="thietketrangtimkiem.aspx.cs">
+      <DependentUpon>thietketrangtimkiem.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Timkiem.aspx.designer.cs">
-      <DependentUpon>Timkiem.aspx</DependentUpon>
+    <Compile Include="thietketrangtimkiem.aspx.designer.cs">
+      <DependentUpon>thietketrangtimkiem.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
